; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_main.c_rtw_chip_info_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_main.c_rtw_chip_info_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtw_dev = type { i32 }

@.str = private unnamed_addr constant [33 x i8] c"failed to setup chip parameters\0A\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"failed to setup chip efuse info\0A\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"failed to setup chip board info\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtw_chip_info_setup(%struct.rtw_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rtw_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.rtw_dev* %0, %struct.rtw_dev** %3, align 8
  %5 = load %struct.rtw_dev*, %struct.rtw_dev** %3, align 8
  %6 = call i32 @rtw_chip_parameter_setup(%struct.rtw_dev* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.rtw_dev*, %struct.rtw_dev** %3, align 8
  %11 = call i32 @rtw_err(%struct.rtw_dev* %10, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  br label %29

12:                                               ; preds = %1
  %13 = load %struct.rtw_dev*, %struct.rtw_dev** %3, align 8
  %14 = call i32 @rtw_chip_efuse_info_setup(%struct.rtw_dev* %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load %struct.rtw_dev*, %struct.rtw_dev** %3, align 8
  %19 = call i32 @rtw_err(%struct.rtw_dev* %18, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  br label %29

20:                                               ; preds = %12
  %21 = load %struct.rtw_dev*, %struct.rtw_dev** %3, align 8
  %22 = call i32 @rtw_chip_board_info_setup(%struct.rtw_dev* %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load %struct.rtw_dev*, %struct.rtw_dev** %3, align 8
  %27 = call i32 @rtw_err(%struct.rtw_dev* %26, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  br label %29

28:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %31

29:                                               ; preds = %25, %17, %9
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %29, %28
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @rtw_chip_parameter_setup(%struct.rtw_dev*) #1

declare dso_local i32 @rtw_err(%struct.rtw_dev*, i8*) #1

declare dso_local i32 @rtw_chip_efuse_info_setup(%struct.rtw_dev*) #1

declare dso_local i32 @rtw_chip_board_info_setup(%struct.rtw_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
